diesel_compile_tests/tests/fail/derive_deprecated/deprecated_column_name.stderr
warning: #[column_name] attribute form is deprecated
  = help: use `#[diesel(column_name = name)]` instead

warning: #[column_name] attribute form is deprecated
  = help: use `#[diesel(column_name = name)]` instead

error: unexpected end of input, expected `=`
       help: the correct format looks like `#[diesel(column_name = foo)]`
  --> tests/fail/derive_deprecated/deprecated_column_name.rs:24:7
   |
LL |     #[column_name]
   |       ^^^^^^^^^^^

error: expected `=`
  --> tests/fail/derive_deprecated/deprecated_column_name.rs:32:18
   |
LL |     #[column_name()]
   |                  ^^

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_column_name.rs:40:21
   |
LL |     #[column_name = 1]
   |                     ^

warning: #[column_name] attribute form is deprecated
  = help: use `#[diesel(column_name = 1)]` instead

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_column_name.rs:48:21
   |
LL |     #[column_name = "1"]
   |                     ^^^
